# StorageAPI

./: Cargo.toml  README.md
src/: global_storage.rs  inline_storage.rs  lib.rs  sharable_storage_wrapper.rs  slot_storage.rs  storage_box.rs  storage_rc.rs  storage_string.rs  storage_vec.rs  storage_vecdeque.rs
src/storage_vec/: into_iter.rs
