[package]
name = "storage_api"
version = "0.5.0"
edition = "2024"
description = "Implementation of the Storage API, a better version of Allocator"
license = "MIT"
repository = "https://github.com/HomelikeBrick42/StorageAPI"

[dependencies]
cfg-if = "1.0.0"

[features]
default = ["nightly"]
nightly = []

[lints.rust]
elided_lifetimes_in_paths = "deny"
missing_docs = "warn"
